--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -45,10 +45,9 @@
             <div class="text-desc mt-3">
                 Enter your Email address beow o subscribe to our newsletter and keep up to date with discounts and special offers.
                 <div>
-                  <form [formGroup]="emailForm" (ngSubmit)="onSubmit()">
+                  <form [formGroup]="emailForm" (ngSubmit)="onSubmit()" class="d-flex align-items-end mt-5">
                     <div>
-                      <label for="email">Email:</label>
-                      <input type="email" id="email" formControlName="email">
+                       <input type="email" class="form-control py-2 " id="email" formControlName="email">
                       <div *ngIf="email.touched && email.invalid">
                         <div *ngIf="email.errors?.required">
                           Email is required.
@@ -58,7 +57,7 @@
                         </div>
                       </div>
                     </div>
-                    <button class="btn-text" type="submit">Submit</button>
+                    <button class="btn cus-bg-green text-white fs-7 py-2 px-3 ms-2 border-radius-4" type="submit">Subscribe</button>
                   </form>
                 </div>
             </div>
