--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,19 +1,31 @@
-.text-label{
-    color: white;
-    font-size: 17px;
+.text-label {
+  color: white;
+  font-size: 17px;
 }
-.text-desc{
-    color: #ffffff73;
-    font-size: 12px;
+
+.text-desc {
+  color: #ffffff73;
+  font-size: 12px;
 }
-.text-labels{
-    color: white;
-    font-size: 12px;
+
+.text-labels {
+  color: white;
+  font-size: 12px;
 }
-.mat-flat-button.mat-primary, .mat-raised-button.mat-primary, .mat-fab.mat-primary, .mat-mini-fab.mat-primary {
-    background-color: #45b26b;
+
+.mat-flat-button.mat-primary,
+.mat-raised-button.mat-primary,
+.mat-fab.mat-primary,
+.mat-mini-fab.mat-primary,.cus-bg-green {
+  background-color: #00dba8;
 }
-.btn-text {
-    padding: .25em 0 .75em 0;
-    background-color: gray !important;
+
+.border-radius-4 {
+  border-radius: 4px !important
+}
+ 
+.form-control {
+  background-color: #4f4f4f;
+  border: 1px solid #212529;
+  @extend.border-radius-4
 }
