--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,9 +1,11 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="d-flex justify-content-between w-100 align-items-center">
     <img src="assets/images/logo.png" class="img-fluid" alt="Responsive Logo">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="d-flex justify-content-between">
+
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item active">
@@ -18,9 +20,23 @@
       </ul>
     </div>
     <div>
-      <i class="fas fa-spinner fa-spin"></i>
-      <i class="fa-regular fa-address-book"></i>  
+
+      <div class="d-flex align-items-center">
+        <div class="me-3"> <i class="fa-regular fa-heart"></i></div>
+        <div class="d-flex align-items-center ps-3"> <i class="fa-regular fa-user "></i>
+          <div class="d-flex flex-column align-items-center justify-content-start ps-2">
+            <span class="w-100 text-secondary"> Hello Login</span>
+            <span>Sathishkumar</span>
+          </div>
+        </div>
+        <div class="d-flex align-items-center mx-3"> <i class="fa-solid fa-cart-shopping"></i>
+          <div class="d-flex flex-column align-items-center justify-content-start ps-2">
+            <span class="w-100 text-secondary"> Shopping cart</span>
+            <span class="w-100 ">₹1468.60</span>
+          </div>
+        </div>
+      </div>
+
     </div>
   </div>
 </nav>
-  
