--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,4 +1,19 @@
 img {
-    max-width: 100%;
-    height: 100%;
-}   
+  max-width: 100%;
+  height: 100%;
+}
+
+.navbar {
+  padding: 10px 3%;
+
+  i {
+    font-size: 20px !important;
+    color: #00dba8;
+  }
+  .ps-2 span:first-child {
+    font-size: 12px;
+  }
+  .ps-2 span:last-child {
+    font-size: 14px;
+  }
+}
