--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -4,7 +4,7 @@
       <div class="image-container">
         <img [src]="product.image" [alt]="product.name" />
         <div class="zoom-icon" (click)="zoomImage(product.image)">
-          <span class="icon-square"></span>
+          <i class="fa-solid fa-arrows-up-down-left-right"></i>
         </div>
       </div>
       <h3 class="text-label">{{ product.name }}</h3>
