--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,10 +1,10 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="d-flex justify-content-between w-100 align-items-center">
-    <img src="assets/images/logo.png" class="img-fluid" alt="Responsive Logo">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+  <div class="d-flex justify-content-between w-100 align-items-center flex-md-row flex-column">
+   <div class="d-flex flex-row  justify-content-between align-items-center"> <img src="assets/images/logo.png" class="img-fluid" alt="Responsive Logo">
+    <div class="ps-4"><button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
-    </button>
+    </button></div></div>
 
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
