--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,23 +1,23 @@
 <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active" data-bs-interval="3000">
-        <img src="assets/images/slide-1.jpeg" class="d-block w-100" alt="Slide">
-      </div>
-      <div class="carousel-item" data-bs-interval="2000">
-        <img src="assets/images/logo.png" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="assets/images/slide-1.jpeg" class="d-block w-100" alt="...">
-      </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active" data-bs-interval="3000">
+      <img src="assets/images/slide-1.jpeg" class="d-block w-100" alt="Slide">
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
+    <div class="carousel-item" data-bs-interval="2000">
+      <img src="assets/images/logo.png" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="assets/images/slide-1.jpeg" class="d-block w-100" alt="...">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
 </div>
 
 <!-- <div class="container mt-4">
@@ -40,12 +40,10 @@
 
 <div class="container mt-4">
   <div class="row image-gallery">
-    <div *ngFor="let image of images; let i = index" class="col-3 img-wrapper img-black-white">
+    <div *ngFor="let image of images; let i = index" class=" text-center col-3 img-wrapper img-black-white">
       <img [src]="image.src" class="img-fluid" [alt]="'Image ' + (i + 1)">
-                      <h5 class="card-title">{{ image.title }}</h5>
+      <h5 class="card-title">{{ image.title }}</h5>
 
     </div>
   </div>
 </div>
-
-  
